More i18n for EditingPreferencesPane and support code
* Add human readable text corresponding to enumerators in user-prefs-schema.json.  Add handling of these in generate-prefs.R to export human readable enumerators to translation files/use those translations instead of hard coded text in EditingPreferencesPane.java.
* Add convenience signatures to SelectWidget
* Convert EditingPreferencesPane.java's SelectWidget's to i18n
* Remove CommandConstants.properties file that should have been removed previously
* Minor updates to user-prefs-schema.json to reconcile differences with hard-coded strings in EditingPreferencesPane.java

--- a/src/gwt/src/org/rstudio/studio/client/workbench/prefs/model/UserPrefsAccessorConstants_en.properties
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/prefs/model/UserPrefsAccessorConstants_en.properties
@@ -108,9 +108,9 @@ useSpacesForTabDescription = @enWhether to insert spaces when pressing the Tab k
 numSpacesForTabTitle = @enNumber of spaces for Tab
 numSpacesForTabDescription = @enThe number of spaces to insert when pressing the Tab key.
 
-# Whether to automatically detect indentation settings from file contents.
+# When enabled, the indentation for documents not part of an RStudio project will be automatically detected.
 autoDetectIndentationTitle = @enAutodetect indentation in files
-autoDetectIndentationDescription = @enWhether to automatically detect indentation settings from file contents.
+autoDetectIndentationDescription = @enWhen enabled, the indentation for documents not part of an RStudio project will be automatically detected.
 
 # Whether to show the margin guide in the RStudio code editor.
 showMarginTitle = @enShow margin in editor
@@ -132,13 +132,13 @@ showInvisiblesDescription = @enWhether to show invisible characters, such as spa
 showIndentGuidesTitle = @enShow indentation guides
 showIndentGuidesDescription = @enWhether to show indentation guides in the RStudio code editor.
 
-# Whether continue comments (by inserting the comment character) after adding a new line.
+# Whether to continue comments (by inserting the comment character) after adding a new line.  Press Shift + Enter to exit a comment.
 continueCommentsOnNewlineTitle = @enContinue comments after adding new line
-continueCommentsOnNewlineDescription = @enWhether continue comments (by inserting the comment character) after adding a new line.
+continueCommentsOnNewlineDescription = @enWhether to continue comments (by inserting the comment character) after adding a new line.  Press Shift + Enter to exit a comment.
 
-# Whether web links in comments are clickable.
-highlightWebLinkTitle = @en
-highlightWebLinkDescription = @enWhether web links in comments are clickable.
+# Hyperlinks in comments will be underlined and clickable
+highlightWebLinkTitle = @enHyperlinks in comments will be underlined and clickable
+highlightWebLinkDescription = @enHyperlinks in comments will be underlined and clickable
 
 # The keybindings to use in the RStudio code editor.
 editorKeybindingsTitle = @enKeybinding set for editor
@@ -169,7 +169,7 @@ showHelpTooltipOnIdleTitle = @enShow function help tooltips on idle
 showHelpTooltipOnIdleDescription = @enWhether to show help tooltips for functions when the cursor has not been recently moved.
 
 # Which kinds of delimiters can be used to surround the current selection.
-surroundSelectionTitle = @enSurround selections with
+surroundSelectionTitle = @enSurround selections with delimiter insertion
 surroundSelectionDescription = @enWhich kinds of delimiters can be used to surround the current selection.
 
 # Whether to enable code snippets in the RStudio code editor.
