--- a/src/gwt/src/org/rstudio/studio/client/workbench/prefs/model/UserStateAccessorConstants_en.properties
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/prefs/model/UserStateAccessorConstants_en.properties
@@ -17,99 +17,99 @@
 # rebuild this file.
 
 # A unique identifier representing the user and machine.
-contextIdTitle = @en
-contextIdDescription = @enA unique identifier representing the user and machine.
+contextIdTitle = 
+contextIdDescription = A unique identifier representing the user and machine.
 
 # Whether we have automatically created an .Rprofile for this user.
-autoCreatedProfileTitle = @en
-autoCreatedProfileDescription = @enWhether we have automatically created an .Rprofile for this user.
+autoCreatedProfileTitle = 
+autoCreatedProfileDescription = Whether we have automatically created an .Rprofile for this user.
 
 # The color theme to apply.
-themeTitle = @en
-themeDescription = @enThe color theme to apply.
+themeTitle = 
+themeDescription = The color theme to apply.
 
 # The directory path under which to place new projects by default. Shadows a uipref.
-defaultProjectLocationTitle = @en
-defaultProjectLocationDescription = @enThe directory path under which to place new projects by default. Shadows a uipref.
+defaultProjectLocationTitle = 
+defaultProjectLocationDescription = The directory path under which to place new projects by default. Shadows a uipref.
 
 # Whether to clear hidden objects along with visible objects when clearing the workspace. Set automatically to remember last action.
-clearHiddenTitle = @en
-clearHiddenDescription = @enWhether to clear hidden objects along with visible objects when clearing the workspace. Set automatically to remember last action.
+clearHiddenTitle = 
+clearHiddenDescription = Whether to clear hidden objects along with visible objects when clearing the workspace. Set automatically to remember last action.
 
 # The most recently used plot export options.
-exportPlotOptionsTitle = @en
-exportPlotOptionsDescription = @enThe most recently used plot export options.
+exportPlotOptionsTitle = 
+exportPlotOptionsDescription = The most recently used plot export options.
 
 # The most recently used viewer export options.
-exportViewerOptionsTitle = @en
-exportViewerOptionsDescription = @enThe most recently used viewer export options.
+exportViewerOptionsTitle = 
+exportViewerOptionsDescription = The most recently used viewer export options.
 
 # The most recently used options for saving a plot as a PDF.
-savePlotAsPdfOptionsTitle = @en
-savePlotAsPdfOptionsDescription = @enThe most recently used options for saving a plot as a PDF.
+savePlotAsPdfOptionsTitle = 
+savePlotAsPdfOptionsDescription = The most recently used options for saving a plot as a PDF.
 
 # Most recently used settings for compiling a notebook from an R script.
-compileRNotebookPrefsTitle = @en
-compileRNotebookPrefsDescription = @enMost recently used settings for compiling a notebook from an R script.
+compileRNotebookPrefsTitle = 
+compileRNotebookPrefsDescription = Most recently used settings for compiling a notebook from an R script.
 
 # Most recently used settings for compiling a notebook using R Markdown.
-compileRMarkdownNotebookPrefsTitle = @en
-compileRMarkdownNotebookPrefsDescription = @enMost recently used settings for compiling a notebook using R Markdown.
+compileRMarkdownNotebookPrefsTitle = 
+compileRMarkdownNotebookPrefsDescription = Most recently used settings for compiling a notebook using R Markdown.
 
 # Whether to show UI for publishing content.
-showPublishUiTitle = @en
-showPublishUiDescription = @enWhether to show UI for publishing content.
+showPublishUiTitle = 
+showPublishUiDescription = Whether to show UI for publishing content.
 
 # Whether to show UI for publishing content to RStudio Connect.
-enableRsconnectPublishUiTitle = @en
-enableRsconnectPublishUiDescription = @enWhether to show UI for publishing content to RStudio Connect.
+enableRsconnectPublishUiTitle = 
+enableRsconnectPublishUiDescription = Whether to show UI for publishing content to RStudio Connect.
 
 # The default (last) account used for publishing
-publishAccountTitle = @en
-publishAccountDescription = @enThe default (last) account used for publishing
+publishAccountTitle = 
+publishAccountDescription = The default (last) account used for publishing
 
 # The preferred width, in pixels, of the document outline pane.
-documentOutlineWidthTitle = @en
-documentOutlineWidthDescription = @enThe preferred width, in pixels, of the document outline pane.
+documentOutlineWidthTitle = 
+documentOutlineWidthDescription = The preferred width, in pixels, of the document outline pane.
 
 # How to create new connections to data sources.
-connectViaTitle = @en
-connectViaDescription = @enHow to create new connections to data sources.
+connectViaTitle = 
+connectViaDescription = How to create new connections to data sources.
 
 # The kind of handler to invoke when errors occur.
-errorHandlerTypeTitle = @en
-errorHandlerTypeDescription = @enThe kind of handler to invoke when errors occur.
+errorHandlerTypeTitle = 
+errorHandlerTypeDescription = The kind of handler to invoke when errors occur.
 
 # Whether or not the MinGW compiler with GCC 4.9 is used.
-usingMingwGcc49Title = @en
-usingMingwGcc49Description = @enWhether or not the MinGW compiler with GCC 4.9 is used.
+usingMingwGcc49Title = 
+usingMingwGcc49Description = Whether or not the MinGW compiler with GCC 4.9 is used.
 
 # Whether or not the use of Visual Mode has been confirmed.
-visualModeConfirmedTitle = @en
-visualModeConfirmedDescription = @enWhether or not the use of Visual Mode has been confirmed.
+visualModeConfirmedTitle = 
+visualModeConfirmedDescription = Whether or not the use of Visual Mode has been confirmed.
 
 # The default type for new bibliographies.
-bibliographyDefaultTypeTitle = @en
-bibliographyDefaultTypeDescription = @enThe default type for new bibliographies.
+bibliographyDefaultTypeTitle = 
+bibliographyDefaultTypeDescription = The default type for new bibliographies.
 
 # The default style for inserting citations.
-citationDefaultInTextTitle = @en
-citationDefaultInTextDescription = @enThe default style for inserting citations.
+citationDefaultInTextTitle = 
+citationDefaultInTextDescription = The default style for inserting citations.
 
 # Zotero connection type (local or web)
-zoteroConnectionTypeTitle = @enZotero connection type
-zoteroConnectionTypeDescription = @enZotero connection type (local or web)
+zoteroConnectionTypeTitle = Zotero connection type
+zoteroConnectionTypeDescription = Zotero connection type (local or web)
 
 # Whether to use Better BibTeX when suggesting citation keys and writing citations to BibTeX bibliographies
-zoteroUseBetterBibtexTitle = @enUse Better BibTeX for citation keys and BibTeX export
-zoteroUseBetterBibtexDescription = @enWhether to use Better BibTeX when suggesting citation keys and writing citations to BibTeX bibliographies
+zoteroUseBetterBibtexTitle = Use Better BibTeX for citation keys and BibTeX export
+zoteroUseBetterBibtexDescription = Whether to use Better BibTeX when suggesting citation keys and writing citations to BibTeX bibliographies
 
 # Key for making Zotero API calls
-zoteroApiKeyTitle = @enZotero API Key
-zoteroApiKeyDescription = @enKey for making Zotero API calls
+zoteroApiKeyTitle = Zotero API Key
+zoteroApiKeyDescription = Key for making Zotero API calls
 
 # Directory containing Zotero data files
-zoteroDataDirTitle = @enZotero Data Directory
-zoteroDataDirDescription = @enDirectory containing Zotero data files
+zoteroDataDirTitle = Zotero Data Directory
+zoteroDataDirDescription = Directory containing Zotero data files
 
 
