Fix formatting for options menus

--- a/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PreferencesPaneConstants_en.properties
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PreferencesPaneConstants_en.properties
@@ -1,25 +1,25 @@
-Editing_completionPanel=@enR and C/C++
-Editing_diagnosticsPanel=@enR Diagnostics
-Editing_diagOtherLabel=@enOther Languages
-Editing_diagShowLabel=@enShow Diagnostics
-Editing_displayPanel=@enGeneral
-Editing_editShortcuts=@enModify Keyboard Shortcuts...
-Editing_editSnippets=@enEdit Snippets...
-Editing_executionLabel=@enExecution
-Editing_headerLabel=@enCompletion Delay
-Editing_otherLabel=@enOther Languages
-Editing_otherTip=@enKeyword and text-based completions are supported for several other languages including JavaScript, HTML, CSS, Python, and SQL.
-Editing_savePanel=@enGeneral
-Editing_savePanel_action=@enChange...
-Editing_savePanel_autosave=@enAuto-save
-Editing_serializationLabel=@enSerialization
-Editing_snippetHelp_rstudioLinkName=@encode_snippets
-Editing_snippetHelp_title=@enHelp on code snippets
-Editing_snippetsLabel=@enSnippets
-Editing_tabPanel=@enEditing
-Editing_tabPanel_completionPanel=@enCompletion
-Editing_tabPanel_diagnosticsPanel=@enDiagnostics
-Editing_tabPanel_displayPanel=@enDisplay
-Editing_tabPanel_editingPanel=@enEditing
-Editing_tabPanel_savePanel=@enSaving
-Editing_header=@enGeneral
+Editing_completionPanel=R and C/C++
+Editing_diagnosticsPanel=R Diagnostics
+Editing_diagOtherLabel=Other Languages
+Editing_diagShowLabel=Show Diagnostics
+Editing_displayPanel=General
+Editing_editShortcuts=Modify Keyboard Shortcuts...
+Editing_editSnippets=Edit Snippets...
+Editing_executionLabel=Execution
+Editing_headerLabel=Completion Delay
+Editing_otherLabel=Other Languages
+Editing_otherTip=Keyword and text-based completions are supported for several other languages including JavaScript, HTML, CSS, Python, and SQL.
+Editing_savePanel=General
+Editing_savePanel_action=Change...
+Editing_savePanel_autosave=Auto-save
+Editing_serializationLabel=Serialization
+Editing_snippetHelp_rstudioLinkName=code_snippets
+Editing_snippetHelp_title=Help on code snippets
+Editing_snippetsLabel=Snippets
+Editing_tabPanel=Editing
+Editing_tabPanel_completionPanel=Completion
+Editing_tabPanel_diagnosticsPanel=Diagnostics
+Editing_tabPanel_displayPanel=Display
+Editing_tabPanel_editingPanel=Editing
+Editing_tabPanel_savePanel=Saving
+Editing_header=General
